# djinni

./: .gitignore  README.dropbox.md  README.md  README.snapchat.md  REPO_STRUCTURE.md  WORKSPACE  switch-generator.sh
djinni-rs/: Cargo.toml  README.md  TODO.md
djinni-rs/crates/djinni-ast/: Cargo.toml
djinni-rs/crates/djinni-ast/src/: ast.rs  ident_style.rs  lib.rs  meta.rs  spec.rs
djinni-rs/crates/djinni-cli/: Cargo.toml
djinni-rs/crates/djinni-cli/benches/: generation.rs
djinni-rs/crates/djinni-cli/src/: main.rs
djinni-rs/crates/djinni-cli/tests/: golden.rs
djinni-rs/crates/djinni-generator/: Cargo.toml
djinni-rs/crates/djinni-generator/src/: cpp_gen.rs  cpp_marshal.rs  gen.rs  java_gen.rs  java_marshal.rs  jni_gen.rs  jni_marshal.rs  kotlin_gen.rs  lib.rs  objc_gen.rs  objc_marshal.rs  objcpp_gen.rs  objcpp_marshal.rs  ts_gen.rs  wasm_gen.rs  writer.rs  yaml_gen.rs
djinni-rs/crates/djinni-parser/: Cargo.toml
djinni-rs/crates/djinni-parser/src/: djinni.pest  lib.rs
djinni-rs/crates/djinni-resolver/: Cargo.toml
djinni-rs/crates/djinni-resolver/src/: lib.rs
examples/: example.djinni  example.yaml  run_djinni.sh
objc-lib/: DjinniUtils.h  NSArray+Djinni.h  NSArray+Djinni.mm  UIColor+Djinni.h  UIColor+Djinni.mm
skills/djinni-rs/: SKILL.md
src/: run  run-assume-built
src/source/: CppGenerator.scala  CppMarshal.scala  JNIGenerator.scala  JavaGenerator.scala  JavaMarshal.scala  KotlinGenerator.scala  KotlinMarshal.scala  Main.scala  Marshal.scala  ast.scala  (+15 more)
support-lib/: future.yaml  outcome.yaml
test-suite/: run_djinni.sh  verify_swift.sh
(+551 files in other folders)
